--- a/CodingChallenges/CodingChallenges.csproj
+++ b/CodingChallenges/CodingChallenges.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CodingChallenge.WCTool\CodingChallenge.WCTool.csproj" />
+  </ItemGroup>
+
 </Project>
