--- a/CodingChallenges/CodingChallenges.csproj
+++ b/CodingChallenges/CodingChallenges.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CodingChallenge.HuffmanEncoderDecoder\CodingChallenge.HuffmanEncoderDecoder.csproj" />
     <ProjectReference Include="..\CodingChallenge.JSONParser\CodingChallenge.JSONParser.csproj" />
     <ProjectReference Include="..\CodingChallenge.WCTool\CodingChallenge.WCTool.csproj" />
   </ItemGroup>
